--- a/HeartOfGold/Views/Item/ItemForm.cshtml
+++ b/HeartOfGold/Views/Item/ItemForm.cshtml
@@ -12,8 +12,9 @@
     <p class="lead">Record a donation on the system</p>
 </div>
 
+<div class="container">
     <div class="row">
-        <div class="col-lg-5 col-lg-offset-4 col-md-8 col-md-offset-2 col-sm-10 col-sm-offset-1 col-xs-12 col-offset-xs-0">
+        <div class="col-lg-6 col-lg-offset-3 col-md-6 col-md-offset-3 col-sm-10 col-sm-offset-1 col-xs-12 col-offset-xs-0">
             <div class="panel panel-default">
                 <div class="panel-body">
                     @using (Html.BeginForm("Save", "Item", new { id = "inventory" }))
@@ -53,22 +54,23 @@
                                 @Html.ValidationMessageFor(m => m.Item.CategoryId)
                                 <br />
                             </div>
-                            </div>
-                            @Html.HiddenFor(m => m.Item.Id)
-                            @Html.AntiForgeryToken()
-                        
+                        </div>
+                        @Html.HiddenFor(m => m.Item.Id)
+                        @Html.AntiForgeryToken()
+
                         <div class="col-md-12 center">
-                            <hr style="margin-top:0;"/>
+                            <hr style="margin-top:0;" />
                             <div class="form-group">
                                 <button type="submit" class="btn btn-primary register-button">Save Donation</button>
                                 @Html.ActionLink("Back to Inventory", "Index", "Item", null, new { @class = "btn btn-default" })
                             </div>
                         </div>
-                            }
-                        </div>
-                    </div>                
+                    }
+                </div>
             </div>
         </div>
+    </div>
+</div>
 <hr />
 
 @section scripts
