--- a/HeartOfGold/Views/Profile/Index.cshtml
+++ b/HeartOfGold/Views/Profile/Index.cshtml
@@ -33,7 +33,7 @@ else
 {
     <div class="container">
         <div class="row">
-            <div class="col-md-10 col-md-offset-1">
+            <div class="col-md-10 col-md-offset-1 col-sm-6 col-sm-offset-3">
                 <div class="panel panel-default">
                     <div class="row">
                         <div class="col-md-3 center">
@@ -49,7 +49,7 @@ else
                                         <div class="row">
                                             <div class="col-md-4">
                                                 <label>Date Created:</label>
-                                                <label>@r.Date.ToString("dd MMMM yyyy")</label>
+                                                <label>@r.Date.ToString("dd MMM yyyy")</label>
                                             </div>
                                             <div class="col-md-4">
                                                 <label>Request Type:</label>
