--- a/HeartOfGold/Views/Request/ViewRequests.cshtml
+++ b/HeartOfGold/Views/Request/ViewRequests.cshtml
@@ -17,7 +17,7 @@
 <div class="row">
     <div class="col-md-3">
         <div class="panel panel-default">
-            <div class="panel body">
+            <div class="panel body" style="padding: 9px;">
                 @using (Html.BeginForm())
                 {
                     <label>Look into requests...</label>
