--- a/HeartOfGold/Views/Scheduler/Index.cshtml
+++ b/HeartOfGold/Views/Scheduler/Index.cshtml
@@ -112,6 +112,7 @@
             RenderScheduler();
 
             function RenderScheduler() {
+                events = [];
                 $.ajax({
                     type: 'GET',
                     url: '/scheduler/GetEvents',
