--- a/HeartOfGold/Views/Shared/_NavBar.cshtml
+++ b/HeartOfGold/Views/Shared/_NavBar.cshtml
@@ -14,7 +14,7 @@
             <ul class="nav navbar-nav">
                 <li>@Html.ActionLink("Our Mission", "About", "Home")</li>
                 <li>@Html.ActionLink("Get Started", "Index", "Help")</li>
-                <li>@Html.ActionLink("My Profile", "Index", "Profile")</li>
+                <li>@Html.ActionLink("My Requests", "Index", "Profile")</li>
             </ul>
             @Html.Partial("_LoginPartial")
         </div>
