--- a/HeartOfGold/Views/Profile/Index.cshtml
+++ b/HeartOfGold/Views/Profile/Index.cshtml
@@ -2,7 +2,7 @@
 @using Microsoft.AspNet.Identity;
 
 @{
-    ViewBag.Title = "My Profile";
+    ViewBag.Title = "My Requests";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
