--- a/HeartOfGold/Views/Request/ViewRequests.cshtml
+++ b/HeartOfGold/Views/Request/ViewRequests.cshtml
@@ -66,14 +66,11 @@
                         <div class="form-group">
                             <label class="fonta-weight">Date Submitted</label>
                             @Html.TextBoxFor(r => request.Date, "{0:dd MMMM yyyy}", new { @class = "form-control", @readonly = "readonly" })
-                            <hr style="margin-bottom:5px"/>
+                            <hr style="margin-bottom:5px" />
                             <label><strong>Respond to this request:</strong></label>
                         </div>
                         @Html.HiddenFor(r => request.Id)
                         @Html.HiddenFor(r => request.StudentNumber)
-                        <div class="form-group center">
-                            <button type="submit" class="btn btn bg-primary register-button">Process...</button>
-                        </div>
 
                         <div class="form-group center">
                             <label class="radio-inline">
@@ -83,9 +80,16 @@
                                 @Html.RadioButtonFor(m => request.SelectedStatusId, "3")Unsuccessful
                             </label>
                         </div>
-                    }
-                </div>
-            </div>
+                        <div class="form-group center">
+                            @Html.ActionLink("Allocate donation item...", "Index", "Item")
+                        </div>
+
+                            <div class="form-group center">
+                                <button type="submit" class="btn btn bg-primary register-button">Process...</button>
+                            </div>
+                            }
+                        </div>
+                    </div>
         </div>
     }
 </div>
